--- a/tool/lovetime/index.html
+++ b/tool/lovetime/index.html
@@ -17,7 +17,7 @@
             position: relative;
             height: 100%;
             width: 100%;
-            background-image: url(https://www.mudong.cc/medias/banner/6.jpg);
+            background-image: url(https://tool.mudong.cc/tool/lovetime/bg.jpg);
             background-size: cover;
             background-position: center;
         }
