--- a/index.html
+++ b/index.html
@@ -103,19 +103,19 @@
     <div class="item"> 
         <div class="bg" style="background-color:#28a9e0"></div> 
             <div class="inner"> 
-                <i class="icon-mail"></i> 
+                
                 <span>恋爱ing</span> 
             </div>
         </div> 
 </a>
 
 
-<a href="#" target="_blank"> 
+<a href="/tool/spjx/index.html" target="_blank"> 
     <div class="item"> 
         <div class="bg" style="background-color:#e6162d"></div>
             <div class="inner"> 
-                <i class="icon-weibo"></i> 
-                <span>Weibo</span> 
+                
+                <span>VIP视频免费看</span> 
         </div>
     </div> 
 </a> 
