--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
 </a> 
 
 
-<a href="#" target="_blank"> 
+<a href="/tool/baidu/index.html" target="_blank"> 
     <div class="item"> 
         <div class="bg" style="background-color:#28a9e0"></div>
             <div class="inner"> 
-                <i class="icon-weibo"></i> 
-                <span>Weibo</span> 
+                
+                <span>帮你百度一下</span> 
         </div>
     </div> 
 </a> 
