--- a/tool/spjx/index.html
+++ b/tool/spjx/index.html
@@ -3,7 +3,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>VIP视频破解 - 暮冬工具箱</title>
+		<title>VIP视频解析 - 暮冬工具箱</title>
 		<meta name="description" content="本站为广大网友提供优酷VIP解析，爱奇艺VIP解析，腾讯VIP解析，乐视VIP解析，芒果VIP解析等解析服务，让你省去购买视频VIP费用，欢迎大家收藏本站，并将它介绍给您的朋友！简猿影视,简猿影视是专门做电视剧,电影等在线播放服务，本页面提供电影的相关内容"/>
 		<meta name="keywords" content="VIP,爱奇艺VIP,腾讯视频VIP,电影网站源码,免会员,VIP观看电影,最新电影,动作,热剧,追热剧,电影,视频大全,在线高清电影,付费电影"/>
 		<!-- Set render engine for 360 browser -->
@@ -84,12 +84,12 @@
 				<input value="" id="video-url" type="text" class="am-form-field" placeholder="粘贴原视频播放链接..." required>	
 				<span class="am-input-group-btn">
 					<button id="btn-vip-play" class="am-btn am-btn-primary" type="submit">
-						<span class="am-icon-play-circle"></span> 点击播放
+						<span class="am-icon-play-circle"></span> 解析播放
 					</button>
 				</span>
 			</div>
 			<div class="am-panel am-panel-default">
-				<div class="am-panel-hd">视频播放窗口 - 广告请勿相信！</div>
+				<div class="am-panel-hd">视频解析播放窗口 - 加载过程慢请耐心等待 - 广告请勿相信！</div>
 				
 				<div class="am-panel-bd player-box">
 					<iframe id="ty-vip-player" src="" allowtransparency="true" scrolling="No" width="100%" height="100%"></iframe>
@@ -135,10 +135,10 @@
 			<div class="am-panel am-panel-default">
 				<div class="am-panel-hd">使用说明</div>
 				<div class="am-panel-bd">
-					本工具能破解并播放各大视频网站的 VIP 视频，包括但不限于 爱奇艺、腾讯视频、优酷、乐视、芒果TV、搜狐、1905。使用方法：
+					暮冬提示：本工具能解析并播放各大视频网站的 VIP 视频，包括但不限于 爱奇艺、腾讯视频、优酷、乐视、芒果TV、搜狐、B站等视频网站。使用方法：
 					<ol>
-						<li>进入各大视频网站，找到想要观看的VIP视频，然后复制链接（浏览器上的视频地址）</li>
-						<li>将复制的链接粘贴到顶部的输入框，并点击“破解播放”</li>
+						<li>进入各大视频网站，找到想要观看的VIP视频，然后复制视频链接（浏览器上的视频地址）</li>
+						<li>将复制的链接粘贴到顶部的输入框，并点击“解析播放”</li>
 						<li>等待解析完成，即可免费观看VIP视频</li>
 					</ol>
 					<span class="am-text-warning">免责声明：本站不生产解析接口，本站只做解析接口的搬运工！</span>
