--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
 </a> 
 
 
-<a href="#" target="_blank"> 
+<a href="dmusic.mudong.cc" target="_blank"> 
     <div class="item"> 
         <div class="bg" style="background-color:#e6162d"></div>
             <div class="inner"> 
                 
-                <span>稍后上线</span> 
+                <span>全网音乐下载</span> 
         </div>
     </div> 
 </a> 
