--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 </a> 
 
 
-<a href="dmusic.mudong.cc" target="_blank"> 
+<a href="https://dmusic.mudong.cc/" target="_blank"> 
     <div class="item"> 
         <div class="bg" style="background-color:#e6162d"></div>
             <div class="inner"> 
